# bssh-client

./: .gitignore  CMakeLists.txt  build.bat  config.bat  run.bat
include/: auth.h  bssh.hpp  bsshstrs.h  bsshstrs.hpp  help.h  help.hpp  net.h  toml_write.h
src/: auth.c  help.c  help.cpp  main.c  main.cpp  net.c  qrcodegen.c  toml.c  toml_write.c
test/: CMakeLists.txt  build.bat  config.bat  run.bat
